--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
       </div>
     </section> 
 
-    <!-- <footer>
+   <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-3">
@@ -484,7 +484,7 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer> 
 
 
 
