--- a/services.html
+++ b/services.html
@@ -161,7 +161,7 @@
                Our <span class="text-primary">Services</span> and Offerings 
             </h2>
             <div class="row">
-               <div class="col-md-4">
+               <div class="col-lg-4 col-md-6">
                   <div class="card">
                      <div class="card-body">
                         <img src="img/services1.png" alt="">
@@ -172,7 +172,7 @@
                      </div>
                   </div>
                </div>
-               <div class="col-md-4">
+               <div class="col-lg-4 col-md-6">
                   <div class="card dark">
                      <div class="card-body">
                         <img src="img/services2.png" alt="">
@@ -183,7 +183,7 @@
                      </div>
                   </div>
                </div>
-               <div class="col-md-4">
+               <div class="col-lg-4 col-md-6">
                   <div class="card">
                      <div class="card-body">
                         <img src="img/services3.png" alt="">
@@ -194,7 +194,7 @@
                      </div>
                   </div>
                </div>
-               <div class="col-md-4">
+               <div class="col-lg-4 col-md-6">
                   <div class="card dark">
                      <div class="card-body">
                         <img src="img/services2.png" alt="">
@@ -205,7 +205,7 @@
                      </div>
                   </div>
                </div>
-               <div class="col-md-4">
+               <div class="col-lg-4 col-md-6">
                   <div class="card">
                      <div class="card-body">
                         <img src="img/services1.png" alt="">
@@ -216,7 +216,7 @@
                      </div>
                   </div>
                </div>
-               <div class="col-md-4">
+               <div class="col-lg-4 col-md-6">
                   <div class="card dark">
                      <div class="card-body">
                         <img src="img/services2.png" alt="">
