--- a/case-studies.html
+++ b/case-studies.html
@@ -114,12 +114,12 @@
                 <div class="card">
                   <div class="card-body">
                     <img src="img/case1.jpg" alt="">
-                     <div class="d-flex align-items-center">
-                       <div class="w-25 case-logo">
+                     <div class="case-details">
+                       <div class="case-logo">
                          <img src="img/client1.png" alt="">
                          <!-- <span>Logo</span> -->
                        </div>
-                       <div class="w-75 pl-3">
+                       <div class="case-desc pl-3">
                          <h3><span class="primary-text">Business</span> Plans</h3>
                         <p>
                           Lorem ipsum dolor sit amet consectetur adipisicing elit. In illo vero sed, sint molestias esse omnis cum laudantium explicabo. Nihil
@@ -138,12 +138,12 @@
                 <div class="card">
                   <div class="card-body">
                     <img src="img/case2.jpg" alt="">
-                     <div class="d-flex align-items-center">
-                       <div class="w-25 case-logo">
+                     <div class="case-details">
+                       <div class="case-logo">
                          <img src="img/client2.png" alt="">
                          <!-- <span>Logo</span> -->
                        </div>
-                       <div class="w-75 pl-3">
+                       <div class="case-desc pl-3">
                          <h3><span class="primary-text">Forecasting</span> Model</h3>
                         <p>
                           Lorem ipsum dolor sit amet consectetur adipisicing elit. In illo vero sed, sint molestias esse omnis cum laudantium explicabo. Nihil
@@ -162,12 +162,12 @@
                 <div class="card">
                  <div class="card-body">
                     <img src="img/case3.jpg" alt="">
-                     <div class="d-flex align-items-center">
-                       <div class="w-25 case-logo">
+                     <div class="case-details">
+                       <div class="case-logo">
                          <img src="img/client3.png" alt="">
                          <!-- <span>Logo</span> -->
                        </div>
-                       <div class="w-75 pl-3">
+                       <div class="case-desc pl-3">
                          <h3><span class="primary-text">Startup</span> Model</h3>
                         <p>
                           Lorem ipsum dolor sit amet consectetur adipisicing elit. In illo vero sed, sint molestias esse omnis cum laudantium explicabo. Nihil
@@ -186,12 +186,12 @@
                 <div class="card">
                  <div class="card-body">
                     <img src="img/case4.jpg" alt="">
-                     <div class="d-flex align-items-center">
-                       <div class="w-25 case-logo">
+                     <div class="case-details">
+                       <div class="case-logo">
                          <img src="img/client4.png" alt="">
                          <!-- <span>Logo</span> -->
                        </div>
-                       <div class="w-75 pl-3">
+                       <div class="case-desc pl-3">
                          <h3><span class="primary-text">Startup</span> Model</h3>
                         <p>
                           Lorem ipsum dolor sit amet consectetur adipisicing elit. In illo vero sed, sint molestias esse omnis cum laudantium explicabo. Nihil
@@ -210,12 +210,12 @@
                 <div class="card">
                  <div class="card-body">
                     <img src="img/case5.jpg" alt="">
-                     <div class="d-flex align-items-center">
-                       <div class="w-25 case-logo">
+                     <div class="case-details">
+                       <div class="case-logo">
                          <img src="img/client5.png" alt="">
                          <!-- <span>Logo</span> -->
                        </div>
-                       <div class="w-75 pl-3">
+                       <div class="case-desc pl-3">
                          <h3><span class="primary-text">Statement</span> Digitization</h3>
                         <p>
                           Lorem ipsum dolor sit amet consectetur adipisicing elit. In illo vero sed, sint molestias esse omnis cum laudantium explicabo. Nihil
@@ -234,12 +234,12 @@
                 <div class="card">
                  <div class="card-body">
                     <img src="img/case6.jpg" alt="">
-                     <div class="d-flex align-items-center">
-                       <div class="w-25 case-logo">
+                     <div class="case-details">
+                       <div class="case-logo">
                          <img src="img/client6.png" alt="">
                          <!-- <span>Logo</span> -->
                        </div>
-                       <div class="w-75 pl-3">
+                       <div class="case-desc pl-3">
                          <h3><span class="primary-text">Business</span> Plans</h3>
                         <p>
                           Lorem ipsum dolor sit amet consectetur adipisicing elit. In illo vero sed, sint molestias esse omnis cum laudantium explicabo. Nihil
@@ -417,7 +417,10 @@
             margin:30,
             dots:true,
             responsive:{
-                0:{
+              0: {
+                items: 1,
+              },
+                400:{
                     items:2
                 },
                 600:{
