--- a/blog.html
+++ b/blog.html
@@ -89,7 +89,7 @@
             UGFinancial's <span class="text-primary">Blog</span> 
          </h2>
         <div class="row blog-posts">
-          <div class="col-md-12 featured-post">
+          <div class="col-lg-12 featured-post">
             <div class="card">
               <div class="card-body">
                 <div class="d-flex align-items-center justify-content-between">
@@ -118,8 +118,8 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <a href="">
+          <div class="col-lg-4 col-md-6">
+            <a href=""> 
               <div class="card">
                 <div class="card-body">
                   <img src="img/blog1.jpg" alt="">
@@ -143,7 +143,7 @@
               </div>
             </a>
           </div>
-           <div class="col-md-4">
+           <div class="col-lg-4 col-md-6">
             <a href="">
               <div class="card">
               <div class="card-body">
@@ -168,7 +168,7 @@
             </div>
             </a>
           </div>
-           <div class="col-md-4">
+           <div class="col-lg-4 col-md-6">
            <a href="">
               <div class="card">
               <div class="card-body">
@@ -195,7 +195,7 @@
           </div>
 
 
-          <div class="col-md-4">
+          <div class="col-lg-4 col-md-6">
             <a href="">
               <div class="card">
                 <div class="card-body">
@@ -220,7 +220,7 @@
               </div>
             </a>
           </div>
-           <div class="col-md-4">
+           <div class="col-lg-4 col-md-6">
             <a href="">
               <div class="card">
               <div class="card-body">
@@ -245,7 +245,7 @@
             </div>
             </a>
           </div>
-           <div class="col-md-4">
+           <div class="col-lg-4 col-md-6">
            <a href="">
               <div class="card">
               <div class="card-body">
