--- a/contact.html
+++ b/contact.html
@@ -125,49 +125,49 @@
       </div>
     </section>
 
-    <footer>
+   <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
-            <a href="#" class="logo">
-              <img src="img/logo.png" alt="" />
-            </a>
-            <p class="mt-3">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero,
-              architecto
-            </p>
-            <p>
-              <small>
-                &copy; Copyright 2021. All rights reserved by UGFinancial
-              </small>
-            </p>
+          <div class="col-lg-3 col-md-6">
+              <a href="#" class="logo">
+                <img src="img/logo.png" alt="" />
+              </a>
+              <p class="mt-3">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, architecto
+              </p>
+              <p>
+               <small>
+                  &copy; Copyright 2021. All rights reserved by UGFinancial
+               </small>
+              </p>
           </div>
-          <div class="col-md-3 links">
+          <div class="col-lg-3 col-md-6 links">
             <h3 class="mt-4">About us</h3>
-            <a href="#">About Us</a><br />
-            <a href="#">Case studies</a><br />
-            <a href="#">Services</a><br />
-            <a href="#">Blog</a><br />
-            <a href="#">Contact</a><br />
+            <a href="#">About Us</a><br>
+            <a href="#">Case studies</a><br>
+            <a href="#">Services</a><br>
+            <a href="#">Blog</a><br>
+            <a href="#">Contact</a><br>
           </div>
 
-          <div class="col-md-3 links">
+          <div class="col-lg-3 col-md-6 links">
             <h3 class="mt-4">Services</h3>
-            <a href="#">Investment Planning</a><br />
-            <a href="#">Insurance Planning</a><br />
-            <a href="#">Risk Management</a><br />
-            <a href="#">Saving Plan</a><br />
-            <a href="#">Mutual Fund</a><br />
+            <a href="#">Investment Planning</a><br>
+            <a href="#">Insurance Planning</a><br>
+            <a href="#">Risk Management</a><br>
+            <a href="#">Saving Plan</a><br>
+            <a href="#">Mutual Fund</a><br>
           </div>
 
-          <div class="col-md-3 links">
+           <div class="col-lg-3 col-md-6 links">
             <h3 class="mt-4">Our address</h3>
             <p class="mt-3">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero,
-              architecto
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, architecto
+            </p> 
+            
+            <p class="primary-text">
+               support@UGFinancial.com
             </p>
-
-            <p class="primary-text">support@UGFinancial.com</p>
             <div class="social">
               <i class="fab fa-facebook"></i>
               <i class="fab fa-twitter"></i>
@@ -176,7 +176,8 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> 
+
 
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
