--- a/blog.html
+++ b/blog.html
@@ -277,10 +277,10 @@
 
    
 
-    <footer>
+   <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-lg-3 col-md-6">
               <a href="#" class="logo">
                 <img src="img/logo.png" alt="" />
               </a>
@@ -293,7 +293,7 @@
                </small>
               </p>
           </div>
-          <div class="col-md-3 links">
+          <div class="col-lg-3 col-md-6 links">
             <h3 class="mt-4">About us</h3>
             <a href="#">About Us</a><br>
             <a href="#">Case studies</a><br>
@@ -302,7 +302,7 @@
             <a href="#">Contact</a><br>
           </div>
 
-          <div class="col-md-3 links">
+          <div class="col-lg-3 col-md-6 links">
             <h3 class="mt-4">Services</h3>
             <a href="#">Investment Planning</a><br>
             <a href="#">Insurance Planning</a><br>
@@ -311,7 +311,7 @@
             <a href="#">Mutual Fund</a><br>
           </div>
 
-           <div class="col-md-3 links">
+           <div class="col-lg-3 col-md-6 links">
             <h3 class="mt-4">Our address</h3>
             <p class="mt-3">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, architecto
@@ -328,7 +328,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> 
 
 
 
