--- a/index.html
+++ b/index.html
@@ -308,20 +308,20 @@
     <section id="contact">
       <div class="container">
         <div class="row">
-          <div class="col-md-4" id="about-content">
+          <div class="col-lg-4 col-md-6" id="contact-content">
             <span class="header-small text-left">Contact</span>
             <div class="line ml-0"></div>
             <h2>
               We would love to <span class="text-primary">work</span> with you
             </h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate officiis voluptas excepturi sunt a repudiandae ipsum repellendus autem suscipit adipisci, quo sapiente aperiam dolorum saepe assumenda provident ad! In.
-            </p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate officiis voluptas excepturi sunt a repudiandae ipsum repellendus autem.
+              </p>
             <button class="btn secondary-btn">
               Learn More
             </button>
           </div>
-           <div class="col-md-8" id="contact-img"></div>
+           <div class="col-lg-8 col-md-6" id="contact-img"></div>
         </div>
       </div>
     </section>
@@ -415,8 +415,8 @@
     <section id="newsletter">
       <div class="container">
         <div class="row">
-          <div class="col-md-8" id="newsletter-img"></div>
-          <div class="col-md-4">
+          <div class="col-lg-8 col-md-6" id="newsletter-img"></div>
+          <div class="col-lg-4 col-md-6">
             <div id="newsletter-content">
               <div class="header-small text-left">Newsletter</div>
                 <div class="line ml-0"></div>
@@ -436,7 +436,7 @@
    <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-lg-3 col-md-6">
               <a href="#" class="logo">
                 <img src="img/logo.png" alt="" />
               </a>
@@ -449,7 +449,7 @@
                </small>
               </p>
           </div>
-          <div class="col-md-3 links">
+          <div class="col-lg-3 col-md-6 links">
             <h3 class="mt-4">About us</h3>
             <a href="#">About Us</a><br>
             <a href="#">Case studies</a><br>
@@ -458,7 +458,7 @@
             <a href="#">Contact</a><br>
           </div>
 
-          <div class="col-md-3 links">
+          <div class="col-lg-3 col-md-6 links">
             <h3 class="mt-4">Services</h3>
             <a href="#">Investment Planning</a><br>
             <a href="#">Insurance Planning</a><br>
@@ -467,7 +467,7 @@
             <a href="#">Mutual Fund</a><br>
           </div>
 
-           <div class="col-md-3 links">
+           <div class="col-lg-3 col-md-6 links">
             <h3 class="mt-4">Our address</h3>
             <p class="mt-3">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, architecto
@@ -516,7 +516,10 @@
                 0:{
                     items:1
                 },
-                600:{
+                600: {
+                  items: 2
+                },
+                800:{
                     items:3
                 }
             }
