--- a/case-studies.html
+++ b/case-studies.html
@@ -317,7 +317,7 @@
       <section id="contact">
         <div class="container">
           <div class="row">
-            <div class="col-md-4" id="about-content">
+            <div class="col-lg-4 col-md-6" id="about-content">
               <span class="header-small text-left">Contact</span>
               <div class="line ml-0"></div>
               <h2>
@@ -330,7 +330,7 @@
                 Learn More
               </button>
             </div>
-            <div class="col-md-8" id="contact-img"></div>
+            <div class="col-lg-8 col-md-6" id="contact-img"></div>
           </div>
         </div>
     </section>
