--- a/blog.html
+++ b/blog.html
@@ -19,6 +19,7 @@
      <link rel="stylesheet" href="css/owl.theme.default.css">
      <link rel="stylesheet" href="css/main.css" />
     <title>UG Financial - Case Studies</title>
+     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -81,7 +82,7 @@
       </div>
     </section>
 
-    <section id="blog-a">
+    <section id="blog-a" data-aos="fade-up">
       <div class="container">
          <span class="header-small">Blog</span>
          <div class="line"></div>
@@ -348,6 +349,13 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        offset: 200,
+        duration: 1000
+      });
+    </script>
   
     
     <script>
