--- a/case-studies.html
+++ b/case-studies.html
@@ -19,6 +19,7 @@
      <link rel="stylesheet" href="css/owl.theme.default.css">
      <link rel="stylesheet" href="css/main.css" />
     <title>UG Financial - Case Studies</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -81,7 +82,7 @@
       </div>
     </section>
 
-    <section id="case-studies-a">
+    <section id="case-studies-a" data-aos="fade-up">
       <div class="container">
          <span class="header-small">Case Studies</span>
          <div class="line"></div>
@@ -257,7 +258,7 @@
       </div>
     </section>
 
-    <section id="case-studies-b">
+    <section id="case-studies-b" data-aos="fade-down">
       <div class="container">
         <span class="header-small">Featured Clients</span>
         <div class="line"></div>
@@ -314,7 +315,7 @@
     </section>
 
 
-      <section id="contact">
+      <section id="contact" data-aos="fade-left">
         <div class="container">
           <div class="row">
             <div class="col-lg-4 col-md-6" id="about-content">
@@ -410,6 +411,13 @@
     ></script>
     <script src="js/owl.carousel.js"></script>
 
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        offset: 200,
+        duration: 1000
+      });
+    </script>
     
     <script>
       $(document).ready(function(){
