--- a/case.html
+++ b/case.html
@@ -56,7 +56,7 @@
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
-            <button class="btn secondary-btn ml-3">Request a demo</button>
+            <button class="btn secondary-btn ml-3">Request a callback</button>
           </ul>
         </div>
       </div>
