--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
                 >Contact <span class="sr-only">(current)</span></a
               >
             </li>
-            <button class="btn secondary-btn ml-3">Request a demo</button>
+            <button class="btn secondary-btn ml-3">Request a callback</button>
           </ul>
         </div>
       </div>
@@ -74,7 +74,7 @@
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus
               inventore, dolores provident accusantium est voluptatem.
             </p>
-            <button class="btn primary-btn btn-lg">Request a demo</button>
+            <button class="btn primary-btn btn-lg">Request a callback</button>
           </div>
           
         </div>
