--- a/case-studies.html
+++ b/case-studies.html
@@ -337,7 +337,7 @@
     </section>
    
 
-   <footer>
+    <footer>
       <div class="container">
         <div class="row">
           <div class="col-lg-3 col-md-6">
@@ -355,11 +355,11 @@
           </div>
           <div class="col-lg-3 col-md-6 links">
             <h3 class="mt-4">About us</h3>
-            <a href="#">About Us</a><br>
-            <a href="#">Case studies</a><br>
-            <a href="#">Services</a><br>
-            <a href="#">Blog</a><br>
-            <a href="#">Contact</a><br>
+            <a href="#about">About Us</a><br>
+            <a href="case-studies.html">Case studies</a><br>
+            <a href="services.html">Services</a><br>
+            <a href="blog.html">Blog</a><br>
+            <a href="contact.html">Contact</a><br>
           </div>
 
           <div class="col-lg-3 col-md-6 links">
@@ -381,19 +381,20 @@
                support@UGFinancial.com
             </p>
             <div class="social">
-              <i class="fab fa-facebook"></i>
-              <i class="fab fa-twitter"></i>
-              <i class="fab fa-instagram"></i>
+              <a href="">
+                <i class="fab fa-facebook"></i>
+              </a>
+              <a href="">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="">
+                <i class="fab fa-instagram"></i>
+              </a>
             </div>
           </div>
         </div>
       </div>
     </footer> 
-
-
-
-
-
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
