--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate officiis voluptas excepturi sunt a repudiandae ipsum repellendus autem suscipit adipisci, quo sapiente aperiam dolorum saepe assumenda provident ad! In.
             </p>
-            <button class="btn secondary-btn">
+            <a class="btn secondary-btn" href="services.html">
               Learn More
-            </button>
+            </a>
           </div>
         </div>
       </div>
@@ -326,9 +326,9 @@
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate officiis voluptas excepturi sunt a repudiandae ipsum repellendus autem.
               </p>
-            <button class="btn secondary-btn">
+           <a class="btn secondary-btn" href="case-studies.html">
               Learn More
-            </button>
+            </a>
           </div>
            <div class="col-lg-8 col-md-6" id="contact-img"></div>
         </div>
@@ -460,11 +460,11 @@
           </div>
           <div class="col-lg-3 col-md-6 links">
             <h3 class="mt-4">About us</h3>
-            <a href="#">About Us</a><br>
-            <a href="#">Case studies</a><br>
-            <a href="#">Services</a><br>
-            <a href="#">Blog</a><br>
-            <a href="#">Contact</a><br>
+            <a href="#about">About Us</a><br>
+            <a href="case-studies.html">Case studies</a><br>
+            <a href="services.html">Services</a><br>
+            <a href="blog.html">Blog</a><br>
+            <a href="contact.html">Contact</a><br>
           </div>
 
           <div class="col-lg-3 col-md-6 links">
@@ -486,9 +486,15 @@
                support@UGFinancial.com
             </p>
             <div class="social">
-              <i class="fab fa-facebook"></i>
-              <i class="fab fa-twitter"></i>
-              <i class="fab fa-instagram"></i>
+              <a href="">
+                <i class="fab fa-facebook"></i>
+              </a>
+              <a href="">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="">
+                <i class="fab fa-instagram"></i>
+              </a>
             </div>
           </div>
         </div>
