--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/owl.carousel.css">
      <link rel="stylesheet" href="css/owl.theme.default.css">
      <link rel="stylesheet" href="css/main.css" />
-    <title>UG Financial - Case Studies</title>
+    <title>UG Financial - Blog</title>
      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
@@ -120,7 +120,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
-            <a href=""> 
+            <a href="blog-post.html"> 
               <div class="card">
                 <div class="card-body">
                   <img src="img/blog1.jpg" alt="">
@@ -278,7 +278,7 @@
 
    
 
-   <footer>
+  <footer> 
       <div class="container">
         <div class="row">
           <div class="col-lg-3 col-md-6">
@@ -296,11 +296,11 @@
           </div>
           <div class="col-lg-3 col-md-6 links">
             <h3 class="mt-4">About us</h3>
-            <a href="#">About Us</a><br>
-            <a href="#">Case studies</a><br>
-            <a href="#">Services</a><br>
-            <a href="#">Blog</a><br>
-            <a href="#">Contact</a><br>
+            <a href="#about">About Us</a><br>
+            <a href="case-studies.html">Case studies</a><br>
+            <a href="services.html">Services</a><br>
+            <a href="blog.html">Blog</a><br>
+            <a href="contact.html">Contact</a><br>
           </div>
 
           <div class="col-lg-3 col-md-6 links">
@@ -322,9 +322,15 @@
                support@UGFinancial.com
             </p>
             <div class="social">
-              <i class="fab fa-facebook"></i>
-              <i class="fab fa-twitter"></i>
-              <i class="fab fa-instagram"></i>
+              <a href="">
+                <i class="fab fa-facebook"></i>
+              </a>
+              <a href="">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="">
+                <i class="fab fa-instagram"></i>
+              </a>
             </div>
           </div>
         </div>
