--- a/blog-post.html
+++ b/blog-post.html
@@ -43,6 +43,23 @@
             <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
             </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                The Company
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="about.html">About us</a>
+                <a class="dropdown-item" href="team.html">Our Team</a>
+              </div>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="services.html">Services</a>
             </li>
