--- a/about.html
+++ b/about.html
@@ -15,11 +15,11 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/owl.carousel.css" />
-    <link rel="stylesheet" href="css/owl.theme.default.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <title>UG Financial - Contact</title>
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="css/owl.carousel.css">
+     <link rel="stylesheet" href="css/owl.theme.default.css">
+     <link rel="stylesheet" href="css/main.css" />
+    <title>UG Financial - About</title>
+      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -41,14 +41,16 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="index.html"
+                >Home</a
+              >
             </li>
-             <li class="nav-item dropdown">
+            <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 The Company
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="about.html">About us</a>
+                <a class="dropdown-item selected" href="about.html">About Us  <span class="sr-only">(current)</span></a>
                 <a class="dropdown-item" href="team.html">Our Team</a>
               </div>
             </li>
@@ -62,9 +64,7 @@
               <a class="nav-link" href="blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link selected" href="contact.html"
-                >Contact <span class="sr-only">(current)</span></a
-              >
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <button class="btn secondary-btn ml-3">Request a callback</button>
           </ul>
@@ -72,15 +72,12 @@
       </div>
     </nav>
 
-    <section id="showcase" class="contact-showcase">
+    <section id="showcase" class="about-showcase">
       <div class="container">
           <div class="showcase-content">
             <h1>
-              <span class="primary-text">
-                Connect
-              </span> With
-              Us <br>
-              Anywhere, Anytime
+              We help you <br />
+              <span class="text-primary">Build</span> the Future
             </h1>
             <p class="lead">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus
@@ -93,50 +90,85 @@
       </div>
     </section>
 
-    <section id="contact-a" data-aos="fade-left">
-      <div class="container">
-         <span class="header-small">Contact Us</span>
-         <div class="line"></div>
-         <h2>
-            Get in <span class="text-primary">touch</span> 
-         </h2>
-         <div class="row">
-           <div class="col-md-12">
-             <div class="card contact-card">
-               <div class="card-body contact-form">
-                 <div>
-                  <h3>Get a quote</h3>
-                  <div class="line ml-0"></div>
-                  <p>
-                    Fill up this form and our team will get back to you in 24 hours
-                  </p>
-                  <button class="contact-option">
-                    <i class="fas fa-phone"></i> 250 555 0199
-                  </button><br>
-                  <button class="contact-option">
-                    <i class="fas fa-envelope"></i> support@UGFinancial.com
-                  </button>
-                  <br><br><br>
-                  <div class="social">
-              <i class="fab fa-facebook"></i>
-              <i class="fab fa-twitter"></i>
-              <i class="fab fa-instagram"></i>
-            </div>
-                 </div>
-                 <div>
-                  <form action="">
-                     <input type="text" placeholder="Your Name*">
-                     <input type="email" placeholder="Your Email*"><br>
-                     <textarea name="" id="" placeholder="Your Message*"></textarea>
-                      <button type="submit" class="btn secondary-btn">Send Message</button>
-                  </form>
-                 </div>
+     <section id="about-a" data-aos="fade-right">
+         <div class="container">
+            <span class="header-small">About Us</span>
+            <div class="line"></div>
+            <h2>
+              <span class="text-primary">Empower</span> Your Financial Life 
+            </h2>
+            <div class="row">
+               <div class="col-md-4">
+                  <div class="card">
+                     <div class="card-body">
+                        <span class="work-num">
+                        1
+                        </span>
+                        <h3><span class="primary-text"> What We </span> Do</h3>
+                        <p>
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                           Deserunt nisi eius dolores in dolor odit placeat earum
+                           obcaecati enim quas.
+                        </p>
+                     </div>
+                  </div>
                </div>
-             </div>
-           </div>
+               <div class="col-md-4">
+                  <div class="card">
+                     <div class="card-body">
+                        <span class="work-num">
+                        2
+                        </span>
+                        <h3><span class="primary-text"> Why </span> We Do it</h3>
+                        <p>
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                           Deserunt nisi eius dolores in dolor odit placeat earum
+                           obcaecati enim quas.
+                        </p>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-md-4">
+                  <div class="card">
+                     <div class="card-body">
+                        <span class="work-num">
+                        3
+                        </span>
+                        <h3><span class="primary-text"> How </span> Do We Do it</h3>
+                        <p>
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                           Deserunt nisi eius dolores in dolor odit placeat earum
+                           obcaecati enim quas.
+                        </p>
+                     </div>
+                  </div>
+               </div>
+            </div>
          </div>
+      </section>
+
+          <section id="about-b" data-aos="fade-right">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-6" id="about-img"></div>
+          <div class="col-lg-4 col-md-6" id="about-content">
+            <span class="header-small text-left">How we help?</span>
+            <div class="line ml-0"></div>
+            <h2>
+              Providing You with <span class="text-primary">frictionless</span> experience 
+            </h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate officiis voluptas excepturi sunt a repudiandae ipsum repellendus autem suscipit adipisci, quo sapiente aperiam dolorum saepe assumenda provident ad! In.
+            </p>
+            <a class="btn secondary-btn" href="services.html">
+              Learn More
+            </a>
+          </div>
+        </div>
       </div>
     </section>
+
+   
 
    <footer>
       <div class="container">
@@ -198,6 +230,8 @@
     </footer> 
 
 
+
+
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -213,12 +247,18 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <script src="js/countUp.js"></script>
+    <script src="js/countUp-jquery.js"></script>
+    <script src="js/owl.carousel.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init({
-        offset: 200,
-        duration: 1000
-      });
+  <script>
+    AOS.init({
+      offset: 200,
+      duration: 1000
+    });
+  </script>
+
+
     </script>
   </body>
 </html>
