--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-xl navbar-light">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="img/logo.png" alt="" />
@@ -101,9 +101,7 @@
                <div class="col-md-4">
                   <div class="card">
                      <div class="card-body">
-                        <span class="work-num">
-                        1
-                        </span>
+                        <img src="img/whatwedo.png" alt="">
                         <h3><span class="primary-text"> What We </span> Do</h3>
                         <p>
                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -116,9 +114,7 @@
                <div class="col-md-4">
                   <div class="card">
                      <div class="card-body">
-                        <span class="work-num">
-                        2
-                        </span>
+                        <img src="img/whywedo.png" alt="">
                         <h3><span class="primary-text"> Why </span> We Do it</h3>
                         <p>
                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -131,9 +127,7 @@
                <div class="col-md-4">
                   <div class="card">
                      <div class="card-body">
-                        <span class="work-num">
-                        3
-                        </span>
+                         <img src="img/howwedo.png" alt="">
                         <h3><span class="primary-text"> How </span> Do We Do it</h3>
                         <p>
                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
