--- a/case-studies.html
+++ b/case-studies.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-xl navbar-light">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="img/logo.png" alt="" />
