--- a/case.html
+++ b/case.html
@@ -21,6 +21,306 @@
 
     <title>UG Financial - Case</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script type="module">
+      import * as prismic from "https://cdn.skypack.dev/@prismicio/client";
+      import * as prismicH from "https://cdn.skypack.dev/@prismicio/helpers";
+      const repoName = "ugfinancial";
+      const endpoint = prismic.getEndpoint(repoName);
+      const client = prismic.createClient(endpoint);
+      const init = async () => {
+        const homeDoc = await client.getSingle("home");
+        const prismicDoc = await client.getSingle("case_studies");
+        setLogo(homeDoc);
+        setCaseA(prismicDoc);
+        setFooter(homeDoc);
+      };
+
+      function setCaseA(prismicDoc) {
+        let searchParams = new URLSearchParams(window.location.search);
+        if (searchParams.has("caseId")) {
+          let caseId = searchParams.get("caseId");
+          const caseStudy = prismicDoc.data.body[0].items[caseId];
+
+          if (!caseStudy) {
+            window.location.href = "case-studies.html";
+          }
+
+          let item = "";
+
+          const {
+            case_image,
+            case_heading,
+            case_main_heading,
+            case_description,
+            category,
+            company_name,
+            company_logo,
+            reviewer_image,
+            company_review,
+            review_maker_name,
+            retails_increased,
+            show_counters,
+            millions_raised,
+            increase_in_organic,
+            reviewer_designation,
+            key_insight_one_heading,
+            key_insight_one_description,
+            key_insight_two_heading,
+            key_insight_two_description,
+            key_insight_three_heading,
+            key_insight_three_description,
+          } = caseStudy;
+
+          const caseA = document.querySelector(".case-study-part-a");
+          const retailCounter = document.querySelector(".benefit-num.retail");
+          const millionCounter = document.querySelector(".benefit-num.million");
+          const organicCounter = document.querySelector(".benefit-num.organic");
+
+          const caseADescription = caseA.children[0];
+          const caseAImage = caseA.children[1].children[0];
+
+          const clientLogo = caseADescription.children[0];
+          const headerSmall = caseADescription.children[1];
+          const heading = caseADescription.children[3];
+          const caseDetails = caseADescription.children[4];
+
+          const headline = category.trim();
+          headerSmall.textContent = headline;
+          heading.innerHTML = prismicH.asHTML(case_main_heading);
+          let detailsHTML = prismicH.asHTML(case_description);
+          if (show_counters) {
+            detailsHTML += `<p>According to the founder of <strong>${company_name[0].text.trim()}</strong>,</p>`;
+
+            if (retails_increased) {
+              retailCounter.children[0].textContent = retails_increased;
+            } else {
+              retailCounter.parentElement.remove();
+            }
+
+            if (millions_raised) {
+              millionCounter.children[0].textContent = millions_raised;
+            } else {
+              millionCounter.parentElement.remove();
+            }
+
+            if (increase_in_organic) {
+              organicCounter.children[0].textContent = increase_in_organic;
+            } else {
+              organicCounter.parentElement.remove();
+            }
+
+            setCounters();
+          } else {
+            retailCounter.parentElement.remove();
+            millionCounter.parentElement.remove();
+            organicCounter.parentElement.remove();
+          }
+
+          caseDetails.innerHTML = detailsHTML;
+
+          caseAImage.setAttribute("src", `${case_image.url}`);
+
+          $(".loader").fadeOut();
+
+          const caseB = document.querySelector("#case-study-b");
+          const caseBCompany = document.querySelector("#case-study-b h2");
+          const caseBReview = document.querySelector(
+            "#case-study-b .case-review .review-content"
+          );
+
+          const reviewMaker = document.querySelector(".review-maker");
+          reviewMaker.setAttribute("src", `${reviewer_image.url}`);
+          const reviewMakerName = document.querySelector(".review-maker-name");
+          reviewMakerName.textContent =
+            review_maker_name == [] ? "" : review_maker_name[0].text;
+          const reviewMakerDesignation = document.querySelector(
+            ".review-maker-designation"
+          );
+
+          reviewMakerDesignation.textContent =
+            reviewer_designation == [] ? "" : reviewer_designation[0].text;
+
+          caseBReview.innerHTML = prismicH.asHTML(company_review);
+
+          caseBCompany.innerHTML = `<span class="primary-text">${company_name[0].text}'s</span> Review`;
+
+          const keyInsightOneHeading = document.querySelector(
+            "#key-insight-one-heading"
+          );
+          const keyInsightOneDescription = document.querySelector(
+            "#key-insight-one-description"
+          );
+
+          const keyInsightTwoHeading = document.querySelector(
+            "#key-insight-two-heading"
+          );
+          const keyInsightTwoDescription = document.querySelector(
+            "#key-insight-two-description"
+          );
+
+          const keyInsightThreeHeading = document.querySelector(
+            "#key-insight-three-heading"
+          );
+          const keyInsightThreeDescription = document.querySelector(
+            "#key-insight-three-description"
+          );
+
+          keyInsightOneHeading.innerHTML = prismicH.asHTML(
+            key_insight_one_heading
+          );
+          keyInsightOneDescription.textContent =
+            key_insight_one_description[0].text;
+
+          keyInsightTwoHeading.innerHTML = prismicH.asHTML(
+            key_insight_two_heading
+          );
+          keyInsightTwoDescription.textContent =
+            key_insight_two_description[0].text;
+
+          keyInsightThreeHeading.innerHTML = prismicH.asHTML(
+            key_insight_three_heading
+          );
+          keyInsightThreeDescription.textContent =
+            key_insight_three_description[0].text;
+        } else {
+          window.location.href = "case-studies.html";
+        }
+      }
+
+      function setCounters() {
+        var countUpFinished = false;
+        if ($(window).width() > 1200) {
+          $(".counter").each(function () {
+            var element = $(this);
+            var endVal = parseInt(element.text());
+            element.countup(endVal);
+          });
+          countUpFinished = true;
+        } else {
+          $(window).scroll(function () {
+            if (
+              !countUpFinished &&
+              window.pageYOffset > stats - $(window).height()
+            ) {
+              $(".counter").each(function () {
+                var element = $(this);
+                var endVal = parseInt(element.text());
+                console.log("here");
+                element.countup(endVal);
+              });
+
+              countUpFinished = true;
+            }
+          });
+        }
+      }
+
+      function getKeyByValue(object, value) {
+        return Object.keys(object).find((key) => object[key] === value);
+      }
+
+      function setLogo(prismicDoc) {
+        const { logo } = prismicDoc.data;
+        const navbarBrand = document.querySelector(".navbar-brand");
+        const navbarLogo = navbarBrand.children[0];
+        navbarLogo.setAttribute("src", `${logo.url}`);
+      }
+
+      function setFooter(prismicDoc) {
+        const footerA = document.querySelector(".footer-a");
+        const { logo, footer_a_description } = prismicDoc.data.body[7].primary;
+
+        const footerLogo = footerA.children[0];
+        const descriptionA = footerA.children[1];
+
+        footerLogo.innerHTML = ` <img src="${logo.url}" alt="${logo.alt}" />`;
+        descriptionA.textContent = footer_a_description[0].text.trim();
+
+        // PART B
+        const footerB = document.querySelector(".footer-b");
+        const { footer_b_heading } = prismicDoc.data.body[8].primary;
+
+        const footerBHeading = footerB.children[0];
+        const footerBLinksDiv = footerB.children[1];
+
+        footerBHeading.textContent = footer_b_heading[0].text.trim();
+
+        let footerBLinks = "";
+        let linkItems = prismicDoc.data.body[8].items;
+        linkItems.forEach((link) => {
+          const { footer_b_link, footer_b_link_text } = link;
+          const l = footer_b_link[0].spans[0].data.url;
+          const t = footer_b_link_text[0].text;
+          footerBLinks += `<a href="${l}">${t}</a><br>`;
+        });
+        let div = document.createElement("div");
+        div.innerHTML = footerBLinks;
+        footerB.replaceChild(div, footerBLinksDiv);
+
+        // PART C
+        const footerC = document.querySelector(".footer-c");
+        const { footer_c_heading } = prismicDoc.data.body[9].primary;
+
+        const footerCHeading = footerC.children[0];
+        const footerCLinksDiv = footerC.children[1];
+
+        footerCHeading.textContent = footer_c_heading[0].text.trim();
+
+        let footerCLinks = "";
+        linkItems = prismicDoc.data.body[9].items;
+        linkItems.forEach((link) => {
+          const { footer_c_link, footer_c_link_text } = link;
+          const l = footer_c_link[0].spans[0].data.url;
+          const t = footer_c_link_text[0].text;
+          footerCLinks += `<a href="${l}">${t}</a><br>`;
+        });
+        div = document.createElement("div");
+        div.innerHTML = footerCLinks;
+        footerC.replaceChild(div, footerCLinksDiv);
+
+        //  PART D
+        const footerD = document.querySelector(".footer-d");
+        const {
+          footer_d_heading,
+          footer_d_description,
+          email,
+          twitter_link,
+          instagram_link,
+          facebook_link,
+        } = prismicDoc.data.body[10].primary;
+
+        const footerDHeading = footerD.children[0];
+        const descriptionD = footerD.children[1];
+        const footerDLink = footerD.children[2];
+        const socialLinks = footerD.children[3];
+
+        footerDHeading.textContent = footer_d_heading[0].text;
+        descriptionD.textContent = footer_d_description[0].text.trim();
+
+        const em = email[0].text;
+
+        footerDLink.innerHTML = `<a href="mailto:${em}">${em}</a>`;
+
+        socialLinks.children[0].setAttribute(
+          "href",
+          `${facebook_link[0].spans[0].data.url}`
+        );
+        socialLinks.children[1].setAttribute(
+          "href",
+          `${twitter_link[0].spans[0].data.url}`
+        );
+        socialLinks.children[2].setAttribute(
+          "href",
+          `${instagram_link[0].spans[0].data.url}`
+        );
+      }
+      init();
+    </script>
   </head>
   <body>
     <div class="loader">
@@ -87,39 +387,41 @@
         <a class="btn secondary-btn" href="case-studies.html"
           >Back To Case Studies</a
         >
-        <div class="row">
+        <div class="row case-study-part-a">
           <div class="col-md-7">
-            <img src="img/client1.png" alt="" / class="case-study-client">
+            <img src="img/client1.png" alt="" class="case-study-client" />
             <span class="header-small text-left">Financial Modelling</span>
             <div class="line ml-0"></div>
             <h2>
               <span class="primary-text">HelloSign's</span> Financial Modelling
             </h2>
-            <p>
-              The company engaged UGFinancial to develop a best-in-class
-              financial model to provide well-grounded guidance to markets,
-              enhance internal decision-making, and prepare for investor
-              presentations. <br />
-              According to the founder of <strong>HelloSign</strong>,
-            </p>
+            <div class="case-details">
+              <p>
+                The company engaged UGFinancial to develop a best-in-class
+                financial model to provide well-grounded guidance to markets,
+                enhance internal decision-making, and prepare for investor
+                presentations. <br />
+                According to the founder of <strong>HelloSign</strong>,
+              </p>
+            </div>
             <div class="benefits">
               <div>
-                <span class="benefit-num"
-                  ><span class="counter"> 1000 </span>+</span
+                <span class="benefit-num retail"
+                  ><span class="counter"></span>+</span
                 >
                 <span class="benefit-desc">Retails Increased</span>
               </div>
 
               <div>
-                <span class="benefit-num"
-                  >$<span class="counter">150</span></span
-                >
+                <span class="benefit-num million"
+                  >$<span class="counter"></span
+                ></span>
                 <span class="benefit-desc">Millions Raised</span>
               </div>
 
               <div>
-                <span class="benefit-num"
-                  ><span class="counter">150</span>%</span
+                <span class="benefit-num organic"
+                  ><span class="counter"></span>%</span
                 >
                 <span class="benefit-desc">Increase In Organic</span>
               </div>
@@ -139,14 +441,14 @@
         <h2><span class="primary-text">HelloSign's</span> Review</h2>
         <div class="card mx-auto w-75">
           <div class="card-body case-review">
-            <p>
+            <div class="review-content">
               "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi
               laborum minus modi perferendis tempore distinctio nobis.
               Recusandae commodi mollitia, minima hic ducimus aliquid
               voluptatibus incidunt officia. Facilis expedita recusandae
               excepturi harum repellat molestias perferendis. Temporibus cumque
               accusamus alias ea quam. "
-            </p>
+            </div>
             <div class="d-flex align-items-center">
               <img src="img/review-maker.jpg" alt="" class="review-maker" />
               <div>
@@ -170,8 +472,10 @@
             <div class="card">
               <div class="card-body">
                 <span class="work-num"> 1 </span>
-                <h3><span class="primary-text"> Financial </span> Model</h3>
-                <p>
+                <h3 id="key-insight-one-heading">
+                  <span class="primary-text"> Financial </span> Model
+                </h3>
+                <p id="key-insight-one-description">
                   We built a financial model that detailed the three distinct
                   business lines operated by the client, as well as numerous
                   planned acquisitions being undertaken.
@@ -183,8 +487,10 @@
             <div class="card">
               <div class="card-body">
                 <span class="work-num"> 2 </span>
-                <h3><span class="primary-text"> Projected </span> Revenue</h3>
-                <p>
+                <h3 id="key-insight-two-heading">
+                  <span class="primary-text"> Projected </span> Revenue
+                </h3>
+                <p id="key-insight-two-description">
                   The model was built with an identified costs, and expenses, in
                   order to separate the projected revenue from confirmed
                   projects and anticipated ones.
@@ -196,8 +502,10 @@
             <div class="card">
               <div class="card-body">
                 <span class="work-num"> 3 </span>
-                <h3><span class="primary-text"> Projected </span> Staffing</h3>
-                <p>
+                <h3 id="key-insight-three-heading">
+                  <span class="primary-text"> Projected </span> Staffing
+                </h3>
+                <p id="key-insight-three-description">
                   The rapid growth of the business also required the model to
                   have the ability to automatically adjust the projected
                   staffing needs based on anticipated utilization.
@@ -213,7 +521,7 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 footer-a">
             <a href="#" class="logo">
               <img src="img/logo.png" alt="" />
             </a>
@@ -227,32 +535,37 @@
               </small>
             </p>
           </div>
-          <div class="col-lg-3 col-md-6 links">
+          <div class="col-lg-3 col-md-6 links footer-b">
             <h3 class="mt-4">About us</h3>
-            <a href="#about">About Us</a><br />
-            <a href="case-studies.html">Case studies</a><br />
-            <a href="services.html">Services</a><br />
-            <a href="blog.html">Blog</a><br />
-            <a href="contact.html">Contact</a><br />
+            <div>
+              <a href="#about">About Us</a><br />
+              <a href="case-studies.html">Case studies</a><br />
+              <a href="services.html">Services</a><br />
+              <a href="blog.html">Blog</a><br />
+              <a href="contact.html">Contact</a><br />
+            </div>
           </div>
-
-          <div class="col-lg-3 col-md-6 links">
+          <div class="col-lg-3 col-md-6 links footer-c">
             <h3 class="mt-4">Services</h3>
-            <a href="#">Investment Planning</a><br />
-            <a href="#">Insurance Planning</a><br />
-            <a href="#">Risk Management</a><br />
-            <a href="#">Saving Plan</a><br />
-            <a href="#">Mutual Fund</a><br />
+            <div>
+              <a href="#">Investment Planning</a><br />
+              <a href="#">Insurance Planning</a><br />
+              <a href="#">Risk Management</a><br />
+              <a href="#">Saving Plan</a><br />
+              <a href="#">Mutual Fund</a><br />
+            </div>
           </div>
-
-          <div class="col-lg-3 col-md-6 links">
+          <div class="col-lg-3 col-md-6 links footer-d">
             <h3 class="mt-4">Our address</h3>
             <p class="mt-3">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero,
               architecto
             </p>
-
-            <p class="primary-text">support@UGFinancial.com</p>
+            <p class="primary-text">
+              <a href="mailto:support@UGFinancial.com"
+                >support@UGFinancial.com</a
+              >
+            </p>
             <div class="social">
               <a href="">
                 <i class="fab fa-facebook"></i>
@@ -268,11 +581,7 @@
         </div>
       </div>
     </footer>
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
@@ -297,7 +606,6 @@
 
     <script>
       $(document).ready(function () {
-        $(".loader").fadeOut(700);
         var stats = $("#case-study-a").offset().top;
         var countUpFinished = false;
 
