--- a/case-studies.html
+++ b/case-studies.html
@@ -223,8 +223,8 @@
 
          $(".categories a").click(function() {
 
-            $(".categories .current").removeClass("current");
-            $(this).addClass("current");
+            $(".categories .sel").removeClass("sel");
+            $(this).addClass("sel");
 
             var selector = $(this).attr("data-filter");
 
